--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Oct 13 13:54:21 UTC 2024
+#Mon Oct 14 13:50:16 UTC 2024
 allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
@@ -23,7 +23,7 @@ hide-online-players=true
 initial-disabled-packs=
 initial-enabled-packs=vanilla,fabric
 level-name=world
-level-seed=
+level-seed=4167799982467607063
 level-type=minecraft\:normal
 max-chained-neighbor-updates=1000000
 max-players=20
